<resources>
    <string name="app_name">The Ultimate Alliance</string>
    <string name="hello_user">Hello user!</string>
    <string name="event_import">Event Import</string>
    <string name="settings">Settings</string>
    <string name="lock_admin">Lock/unlock admin features</string>
    <string name="password">Password</string>
    <string name="personal_preferences">Personal Preferences</string>
    <string name="date">Date</string>
    <string name="event_name">Event Name</string>
    <string name="address">Address</string>
    <string name="blue_alliance">Blue Alliance</string>
    <string name="number">Number</string>
    <string name="time">Time</string>
    <string name="red_alliance">Red Alliance</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="name">Name</string>
    <string name="grade">Grade</string>
    <string name="edit_students">Edit Students</string>
    <string name="add_student">Add Student</string>

    <string name="first_and_last_name">First and last name</string>
    <string name="from_csv">From CSV</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="sync_data">Sync Data</string>
    <string name="devices_to_sync">Devices to Sync</string>
    <string name="launch_data_sync">Launch Data Sync</string>
    <string name="export_data_to_csv">Export Data to CSV</string>
    <string name="left_arrow"><![CDATA[<]]></string>
    <string name="right_arrow"><![CDATA[>]]></string>
    <string name="change_theme">Change theme</string>
</resources>
