<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".eventimport.matchimport.MatchImportFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="0"
        android:background="?headerColor"
        android:padding="5dp"
        android:elevation="2dp"
        android:weightSum="9"
        tools:targetApi="lollipop">

        <TextView
            android:text="@string/number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/list_text"
            android:textAlignment="center"
            android:textColor="?android:textColorPrimary"
            android:layout_gravity="center"
            android:layout_weight="1" />

        <TextView
            android:text="@string/time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/list_text"
            android:textAlignment="center"
            android:textColor="?android:textColorPrimary"
            android:layout_gravity="center"
            android:layout_weight="2" />

        <TextView
            android:text="@string/red_alliance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/list_text"
            android:textAlignment="center"
            android:textColor="?android:textColorPrimary"
            android:layout_gravity="center"
            android:layout_weight="3" />

        <TextView
            android:text="@string/blue_alliance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/list_text"
            android:textAlignment="center"
            android:textColor="?android:textColorPrimary"
            android:layout_gravity="center"
            android:layout_weight="3" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/match_import_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_column="0"
        android:layout_row="1" />
</GridLayout>