<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".main.MainActivity"
    android:theme="@style/AppThemeDark"
    android:background="?android:windowBackground">

    <ToggleButton
        android:id="@+id/toggleButtonFixer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/toggle_color"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?headerColor"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/student_spinner"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:clickable="false"
                android:ellipsize="none"
                android:singleLine="false"
                android:theme="@style/listSpinner" />

            <Switch
                android:id="@+id/show_all"
                android:enabled="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Show All"
                android:textSize="@dimen/list_text"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:elevation="2dp"
            android:weightSum="9.2"
            tools:targetApi="lollipop">

            <TextView
                android:text="@string/number"
                android:textColor="?android:textColorPrimary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/list_text"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:layout_weight="1" />

            <TextView
                android:text="@string/time"
                android:textColor="?android:textColorPrimary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/list_text"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:layout_weight="2" />

            <TextView
                android:text="@string/red_alliance"
                android:textColor="?android:textColorPrimary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/list_text"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:layout_weight="3" />

            <TextView
                android:text="@string/blue_alliance"
                android:textColor="?android:textColorPrimary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/list_text"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:layout_weight="3" />

            <android.support.v7.widget.AppCompatImageButton
                android:visibility="invisible"
                app:srcCompat="@drawable/ic_cancel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_gravity="center"
                android:layout_weight="0.2" />
        </LinearLayout>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/match_import_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>